--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <p class="has-text-justified is-size-6 "
            style="margin-top:1rem; margin-bottom:2.5rem;">
           <b>Overall architecture of VITA-VLA.</b> 
-          Our model is build upon VITA1.5-7B, taking images, instructions, action tokens, and state information as inputs to generate executable actions. 
+          Our model is build upon <a href="https://github.com/VITA-MLLM/VITA" target="_blank" rel="noopener noreferrer">VITA-1.5-7B</a>, taking images, instructions, action tokens, and state information as inputs to generate executable actions. 
           The visual and textual information is input into the VLM. The action token acts as a learnable query, while the robot state is encoded into a single token using linear layers.
           An action mapper extracts the hidden states of the action token from the final layer of the VLM, and transforms these to match the dimensionality expected by the pretrained action decoder, and finally the action decoder generates the corresponding actions with 7 degrees of freedom (DoF).
         </p>
