--- a/index.html
+++ b/index.html
@@ -283,6 +283,13 @@ document.addEventListener('DOMContentLoaded', () => {
             These results demonstrate that action distillation effectively enables VLMs to generate precise, executable actions while substantially reducing training costs.
       
           </p>
+          <p>
+            This design yields substantial efficiency gains over training large VLA models from scratch. 
+            Compared with previous state-of-the-art methods, our method achieves <strong>97.3%</strong> average success rate on LIBERO (<strong>11.8%</strong> improvement), <strong>93.5%</strong> on LIBERO-LONG (<strong>24.5%</strong> improvement), <strong>92.5%</strong> first task success rate on CALVIN ABC-D (<strong>4.1%</strong> improvement). 
+            In real-world experiments across five manipulation tasks, our method consistently outperforms the teacher model Seer, achieving <strong>82.0%</strong> average success rate (<strong>17%</strong> improvement). 
+            These results demonstrate that action distillation effectively enables VLMs to generate precise, executable actions while substantially reducing training costs.
+          </p>
+
         </div>
       </div>
     </div>
