Resolve merge conflict in README.md

--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@ document.addEventListener('DOMContentLoaded', () => {
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/Tencent/VITA/blob/VITA-VLA/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code(Soon)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Video Link. -->
