--- a/index.html
+++ b/index.html
@@ -57,20 +57,23 @@
             More Research
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="https://github.com/BradyFU/Awesome-Multimodal-Large-Language-Models" target="_blank">
-              <strong>MME</strong>
-            </a>
-            <a class="navbar-item" href="https://github.com/BradyFU/Awesome-Multimodal-Large-Language-Models" target="_blank">
-              <strong>Awesome-MLLM</strong>
-            </a>
             <a class="navbar-item" href="https://github.com/VITA-MLLM/VITA" target="_blank">
               <strong>VITA-1.5</strong>
             </a>
             <a class="navbar-item" href="https://github.com/VITA-MLLM/Long-VITA" target="_blank">
               <strong>Long-VITA</strong>
             </a>
+            <a class="navbar-item" href="https://github.com/VITA-MLLM/VITA-Audio" target="_blank">
+              <strong>VITA-Audio</strong>
+            </a>
+            <a class="navbar-item" href="https://github.com/BradyFU/Awesome-Multimodal-Large-Language-Models" target="_blank">
+              <strong>MME</strong>
+            </a>
             <a class="navbar-item" href="https://github.com/MME-Benchmarks/Video-MME" target="_blank">
               <strong>Video-MME</strong>
+            </a>
+            <a class="navbar-item" href="https://github.com/BradyFU/Awesome-Multimodal-Large-Language-Models" target="_blank">
+              <strong>Awesome-MLLM</strong>
             </a>
           </div>
         </div>
