--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ document.addEventListener('DOMContentLoaded', () => {
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="static/files/VITA-VLA.pdf"
+                <a href="https://arxiv.org/pdf/2510.09607"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
