--- a/index.html
+++ b/index.html
@@ -614,18 +614,19 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{shi2025memoryvla,
-  title={MemoryVLA: Perceptual-Cognitive Memory in Vision-Language-Action Models for Robotic Manipulation},
-  author={Shi, Hao and Xie, Bin and Liu, Yingfei and Sun, Lin and Liu, Fengrong and Wang, Tiancai and Zhou, Erjin and Fan, Haoqiang and Zhang, Xiangyu and Huang, Gao},
-  journal={arXiv preprint arXiv:2508.19236},
-  year={2025}
-}
+    <pre><code>@misc{dong2025vitavlaefficientlyteachingvisionlanguage,
+      title={VITA-VLA: Efficiently Teaching Vision-Language Models to Act via Action Expert Distillation}, 
+      author={Shaoqi Dong and Chaoyou Fu and Haihan Gao and Yi-Fan Zhang and Chi Yan and Chu Wu and Xiaoyu Liu and Yunhang Shen and Jing Huo and Deqiang Jiang and Haoyu Cao and Yang Gao and Xing Sun and Ran He and Caifeng Shan},
+      year={2025}, 
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2510.09607},}
     </code></pre>
   </div>
-</section> -->
+</section>
 
 <footer class="footer">
   <div class="container">
