--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ document.addEventListener('DOMContentLoaded', () => {
               </span>
               <!-- Arxiv Link. -->
               <span class="link-block">
-                <a href=" "
+                <a href="https://arxiv.org/abs/2510.09607"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
