--- a/index.html
+++ b/index.html
@@ -617,15 +617,13 @@ document.addEventListener('DOMContentLoaded', () => {
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{
-      dong2025vitavlaefficientlyteachingvisionlanguage,
-      title={VITA-VLA: Efficiently Teaching Vision-Language Models to Act via Action Expert Distillation}, 
+    <pre><code>@article{
+      dong2025vita-vla,
+      title={VITA-VLA: Efficiently Teaching Vision-Language Models to Act via Action Expert Distillation},
       author={Shaoqi Dong and Chaoyou Fu and Haihan Gao and Yi-Fan Zhang and Chi Yan and Chu Wu and Xiaoyu Liu and Yunhang Shen and Jing Huo and Deqiang Jiang and Haoyu Cao and Yang Gao and Xing Sun and Ran He and Caifeng Shan},
-      year={2025}, 
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2510.09607}
-    }
+      journal={arXiv preprint arXiv:2510.09607},
+      year={2025}
+}
     </code></pre>
   </div>
 </section>
