--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
             More Research
           </a>
           <div class="navbar-dropdown">
+            
             <a class="navbar-item" href="https://github.com/VITA-MLLM/VITA" target="_blank">
               <strong>VITA-1.5</strong>
+            </a>
+            <a class="navbar-item" href="https://lxysl.github.io/VITA-E/" target="_blank">
+              <strong>VITA-E</strong>
             </a>
             <a class="navbar-item" href="https://github.com/VITA-MLLM/Long-VITA" target="_blank">
               <strong>Long-VITA</strong>
